# cantina_juce

./: .gitmodules  CMakeLists.txt  README.md
bindings/faust/source/: test.dsp
bindings/juce/: CMakeLists.txt
bindings/lv2/: CMakeLists.txt
bindings/lv2/data/: cantina.ttl  cantina.ttl.in  manifest.ttl  manifest.ttl.in
bindings/lv2/include/: cantina_plugin.hpp
bindings/lv2/modules/cmake/: FindLV2.cmake  LV2Utils.cmake  Utils.cmake
bindings/lv2/source/: cantina_plugin.cpp
bindings/pd/: CMakeLists.txt
bindings/pd/include/: cantina~.hpp
bindings/pd/source/: cantina~.cpp
cantina_juce/: CMakeLists.txt
cantina_lv2/: CMakeLists.txt
cantina_lv2/data/: manifest.ttl
cantina_lv2/include/: cantina_plugin.hpp
cantina_lv2/modules/cmake/: FindLV2.cmake  LV2Utils.cmake
cantina_lv2/source/: cantina_plugin.cpp
